--- a/temperature_analysis.ipynb
+++ b/temperature_analysis.ipynb
@@ -429,13 +429,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "outputs": [
     {
      "data": {
       "text/plain": "0.010875040151996668"
      },
-     "execution_count": 49,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-03T02:13:06.785603Z"
+     "end_time": "2023-10-03T03:13:51.894981Z",
+     "start_time": "2023-10-03T03:13:51.889215Z"
     }
    },
    "id": "40fb0349c812456e"
@@ -478,13 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "outputs": [
     {
      "data": {
       "text/plain": "0.10875040151996668"
      },
-     "execution_count": 51,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +496,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-03T02:26:14.979815Z"
+     "end_time": "2023-10-03T03:13:53.993589Z",
+     "start_time": "2023-10-03T03:13:53.988596Z"
     }
    },
    "id": "aeb5039db4e7ba96"
