--- a/temperature_analysis.ipynb
+++ b/temperature_analysis.ipynb
@@ -762,7 +762,9 @@
     "3. The `black flag` condition was based more than temperature and also factored in (to my understanding) the capacity of local hospitals. i.e. they could have had the run, but likely a lot of people would have needed medical attention as the article suggests.\n",
     "4. The purpose of this notebook is to help demonstrate that 'climate change' as a narrative to every day occurrences is not an appropriate analysis. What happened to the 2023 Twin Cities Marathon was bad weather, not climate change. \n",
     "5. When we incorrectly use 'climate change' as mechanism to explain every day weather outside the context of climate cycles, we do a dis-service to our community.  \n",
-    "6. 'Trust the science' is more a religious mantra than a commitment to good practices. "
+    "6. 'Trust the science' is more a religious mantra than a commitment to good practices. \n",
+    "7. This is my personal analysis and does not reflect the opinion or position of anyone other than myself in my private work. If you think I've made an error in my analysis I welcome you to open a Github Issue, and will review as time allows "
+
    ],
    "metadata": {
     "collapsed": false
